@@ -9,3 +9,4 @@ Fix bug in Prepared: Ammo that prevented shotgunshellsbox from spawning
 Adjust Prepared Ammo to give a Gun Case containing more varied types of ammunition.
 Add Mod Option to track Alcoholism more closely.
 Fix timing issue with InternalTick value never actually reaching 30 before being reset.
+Limit how much anger/stress can be gained from alcohol withdrawal.
